<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android USB Serial Monitor Lite</string>
    <string name="button_write">Write</string>
    
    <string name="terminal_setting_header_title">Serial Settings</string>
    <string name="terminal_setting_header_summary"></string>

    <string name="display_setting_header_title">Display Settings</string>
    <string name="display_setting_header_summary"></string>
    
    <string name="display_setting_title">Display Setting</string>
    
    <string name="fontsize_title">Font size</string>
    <string name="fontsize_summary">Choose font size</string>
    
    <string name="display_title">Display</string>
    <string name="display_summary">Choose char or dec, hex</string>
    
    <string name="linefeedcode_setting_title">Linefeed Code Setting</string>
    <string name="linefeedcode_title">Linefeed Code</string>
    <string name="linefeedcode_summary">Choose CR or LF, CR/LF</string>
    
    <string name="email_setting_title">Email Setting</string>
    <string name="email_title">email</string>
    <string name="email_summary"></string>
    
    <string name="serial_setting_title">Serial Setting</string>
    
    <string name="baudrate_title">Baudrate</string>
    <string name="baudrate_summary">baud rate</string>
    
    <string name="databits_title">Data bits</string>
    <string name="databits_summary">Data bits</string>
    
    <string name="parity_title">Parity check</string>
    <string name="parity_summary">Parity check</string>
    
    <string name="stopbits_title">Stop bit</string>
    <string name="stopbits_summary">Stop bit</string>
    
    <string name="flowcontrol_title">Flow control</string>
    <string name="flowcontrol_summary">Flow control</string>
    
    <string name="break_title">Break</string>
    <string name="break_summary">Break</string>
    
</resources>